# tradingsystem

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
Testing/Temporary/: CTestCostData.txt
app/: CMakeLists.txt  Makefile  algo_trading_app  cmake_install.cmake  main.cpp
execution_engine/: CMakeLists.txt  Makefile  cmake_install.cmake
execution_engine/include/: ExecutionEngine.h
execution_engine/src/: ExecutionEngine.cpp
latency_monitoring/: CMakeLists.txt  Makefile  cmake_install.cmake
latency_monitoring/include/: LatencyMonitor.h
latency_monitoring/src/: LatencyMonitor.cpp
market_data/: CMakeLists.txt  Makefile  cmake_install.cmake
market_data/include/: MarketDataHandler.h
market_data/src/: MarketDataHandler.cpp
order_management/: CMakeLists.txt  Makefile  cmake_install.cmake
order_management/include/: OrderManagementSystem.h
order_management/src/: OrderManagementSystem.cpp
risk_management/: CMakeLists.txt  Makefile  cmake_install.cmake
risk_management/include/: RiskManagement.h
risk_management/src/: RiskManagement.cpp
strategy_engine/: CMakeLists.txt  Makefile  cmake_install.cmake
strategy_engine/include/: StrategyEngine.h
strategy_engine/src/: StrategyEngine.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_execution_engine[1]_include.cmake  test_latency_monitoring[1]_include.cmake  test_market_data[1]_include.cmake  test_order_management[1]_include.cmake  test_risk_management[1]_include.cmake  test_strategy_engine[1]_include.cmake
tests/execution_engine_tests/: test_execution_engine.cpp
tests/latency_monitoring_tests/: test_latency_monitoring.cpp
tests/market_data_tests/: test_market_data.cpp
tests/order_management_tests/: test_order_management.cpp
tests/risk_management_tests/: test_risk_management.cpp
tests/strategy_engine_tests/: test_strategy_engine.cpp
